refactor: replace virtual threads with fixed thread pool (Java 17 compat)